[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'substrate-poa'
version = '1.0.0'


[[bin]]
name = 'substrate-poa'
path = 'src/main.rs'

[dependencies]
derive_more = "0.15.0"
futures = "0.1.29"
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.1.4"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sr-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-executor = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-service = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate.git", branch = "master" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate.git", branch = "master" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate.git", branch = "master" }
aura = { package = "substrate-consensus-aura", git = "https://github.com/paritytech/substrate.git", branch = "master" }
aura-primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate.git", branch = "master" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate.git", branch = "master" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-client = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-poa-runtime = { package = "substrate-poa-runtime", path = "runtime" }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

[build-dependencies]
vergen = '3.0.4'
