[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-poa-runtime'
version = '2.0.0'

[dependencies]
# 3rd party
serde = { version = "1.0.102", optional = true, features = ["derive"] }
safe-mix = { version = "1.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }

# primitives
primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
aura-primitives = { package = "substrate-consensus-aura-primitives",  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
sr-primitives = {  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

# core
sr-api = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
block-builder-api = { package = "substrate-block-builder-runtime-api", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
tx-pool-api = { package = "substrate-transaction-pool-runtime-api",git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
substrate-session = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
substrate-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }

# srml
support = { package = "paint-support", git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
balances = { package = "paint-balances", git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
aura = { package = "paint-aura",  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
grandpa = { package = "paint-grandpa",  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
executive = { package = "paint-executive",  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
indices = { package = "paint-indices",  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
randomness-collective-flip = { package = "paint-randomness-collective-flip",  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
system = { package = "paint-system", git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
timestamp = { package = "paint-timestamp",  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
sudo = { package = "paint-sudo",  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
transaction-payment = { package = "paint-transaction-payment",  git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }
session = { package = "paint-session", git = "https://github.com/paritytech/substrate.git", branch = "master", default_features = false }


[dev-dependencies]
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", branch = "master"}

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sr-api/std",
	"rstd/std",
	"support/std",
	"balances/std",
	"aura/std",
	"aura-primitives/std",
	"grandpa/std",
	"executive/std",
	"indices/std",
	"primitives/std",
	"sr-primitives/std",
	"randomness-collective-flip/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"transaction-payment/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
]
